@@ -51,9 +51,21 @@ sub generate_glew_xs {
       my (@thisargdata, $thistype, $retcap, $retout, $thiscode) = @argdata;
       my ($beforecall, $aftercall) = ('', '');
       my $error_check = $name eq "glGetError" ? "" : "OGLM_CHECK_ERR($name, )";
+      my $error_check2 = $error_check;
       $thistype = $item->{restype};
-      ($retcap, $retout) = $thistype eq 'void' ? ('','') : ('RETVAL = ', "\nOUTPUT:\n  RETVAL");
-      $thiscode = "CODE:\n";
+      if ($binding_name =~ /_p$/) {
+        die "$binding_name: don't know how to bind" if $binding_name !~ /^glGen/;
+        die "$binding_name: expected void, got '$item->{restype}'" if $item->{restype} ne 'void';
+        die "$binding_name: expected (n, other), got '@{[join ', ', map $_->[0], @thisargdata]}'" if @argdata != 2;
+        pop @thisargdata;
+        ($retcap, $retout) = $thistype eq 'void' ? ('','') : ('RETVAL = ', "\nOUTPUT:\n  RETVAL");
+        $thiscode = "PPCODE:\n";
+        ($beforecall, $aftercall) = ("  OGLM_GEN_SETUP($name, $argdata[0][0], $argdata[1][0])\n", "\n  OGLM_GEN_FINISH($argdata[0][0], $argdata[1][0])");
+        $error_check2 = "OGLM_CHECK_ERR($name, free($argdata[1][0]))";
+      } else {
+        ($retcap, $retout) = $thistype eq 'void' ? ('','') : ('RETVAL = ', "\nOUTPUT:\n  RETVAL");
+        $thiscode = "CODE:\n";
+      }
       my $args = join ', ', map $_->[0], @thisargdata;
       my $res = "$thistype\n$binding_name($args)\n";
       $res .= join '', map "  $_->[1]$_->[0];\n", @thisargdata;
@@ -61,7 +73,7 @@ sub generate_glew_xs {
       $res .= "  $error_check\n" if $error_check;
       $res .= $avail_check . $beforecall;
       $res .= qq{  $retcap$name$callarg_list;};
-      $res .= "\n  $error_check" if $error_check;
+      $res .= "\n  $error_check2" if $error_check2;
       $content .= "$res$aftercall$retout\n\n";
     }
   }
