@@ -5,6 +5,7 @@
 - add OpenGL::Modern::Config like OpenGL::Config
 - add glpErrorString
 - add export tags :glewfunctions :glpfunctions :glfunctions :glconstants :glcompat
+- glGen* now have POGL-like _p variants
 
 0.04     2017-08-06 12:06:13-04:00
 - Add module to allow OpenGL::Image to work with OpenGL::Modern
